name:          obedient
category:      obedient
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Jonathan Fischoff, Gabriel Gonzalez, Tikhon Jelvis
maintainer:    Jonathan Fischoff <jonathangfischoff@gmail.com>, Gabriel Gonzalez <Gabriel439@gmail.com>, Tikhon Jelvis <tikhon@jelv.is>
stability:     experimental
homepage:      http://github.com/secret-adventure/obedient/
bug-reports:   http://github.com/secret-adventure/obedient/issues
copyright:     Copyright (C) 2013 Jonathan Fischoff
synopsis:      Tame your UI
description:   Tame your UI
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/secret-adventure/obedient.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.4 && < 5
    , diagrams-core == 0.6.*
    , diagrams-lib  == 0.6.* 

test-suite testcases
   type:    exitcode-stdio-1.0
   main-is: Main.hs
   default-language: Haskell2010
   build-depends:
        base >= 4.4 && < 5
      , diagrams-core == 0.6.*
      , diagrams-lib  == 0.6.*
      , template-haskell >= 2.6 && < 2.9
      , test-framework == 0.8.*
      , test-framework-th == 0.2.*
      , HUnit == 1.2.*
      , test-framework-hunit == 0.3.*
   
   hs-source-dirs: tests, src

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
